--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,7 @@ body{
     background: var(--color-background); 
     user-select: none;
     overflow-x: hidden;
+    color: var(--color-dark);
 }
 .container{
     display: grid;
@@ -108,14 +109,14 @@ b{
 }
 aside{
     height: 100vh;
-    background:gray;
+    /*background: gray;*/
 }
 aside.top{
-    background: yellowgreen;
+    background: #fff;
     display: flex;
     align-items: center;
     justify-content: space-between;
-    margin-top: 1.4rem;
+    margin-top: 0.8rem;
 }
 aside.logo{
     display: flex;
@@ -130,12 +131,11 @@ display:none;
 }
 
 aside .sidebar{
-background:wheat;
 display: flex;
 flex-direction: column;
 height: 86vh;
 position: relative;
-top: 3rem;
+top: 2rem;
 }
 
 aside h3{
@@ -151,6 +151,9 @@ aside .sidebar a{
    height: 3.7rem;
    transition: all 300ms ease;
 }
+aside.sidebar a span{
+    font-size: 1.6rem  ;
+}
 aside .sidebar a:last-child{
     position: absolute;
     bottom:2rem;
@@ -164,5 +167,119 @@ margin-left:0;
 }
 
 aside .sidebar a.active:before{
+content: "";
+width: 6px;
+height: 100%;
+background:var(--color-primary) ;
+}
+aside.sidebar a active span{
+    color: var(--color-primary);
+    margin-left: calc(1rem -3px);
+}
+aside.sidebar a:hover{
+    color: var(--color-primary);
+}
+aside .sidebar a:hover span{
+   margin-left: 1rem;  
+}
+aside .sidebar .message-count{
+    background: var(--color-danger);
+    color: var(--color-white);
+    padding: 2px 10px;
+    font-size: 11px;
+    border-radius: var(--card-radius-1);
+}
+ 
+/* end of main    */
+main{
+    margin-top: 1.4rem;
+}
+main .date{
+    display: inline-block;
+    background: var(--color-light);
+    border-radius: var(--border-radius-1);
+    margin-top: 1rem;
+    padding:0.5rem 1.6rem ;
+}
+main .date input[type="date"] {
+    background: transparent;
+    color: var(--color-dark);
+}
+main .insights{
+display: grid;
+grid-template-columns: repeat(3,1fr);
+gap: 1.6rem;
+}
+main .insights > div{
+    background: var(--color-white);
+    padding: var(--card-padding);
+    border-radius: var(--card-border-radius);
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition: all 380ms  ease;
+}
+main .insights > div:hover{
+    box-shadow: none;
+}
+main .insights > div span{
+    background:var(--color-primary);
+    padding: 0.5rem;
+    border-radius: 50%;
+    color: var(--color-white) ;
+    font-size:2rem ;
+}
+main .insights > div.income span{
+    background: var(--color-success);
+}
+main .insights > div.expenses span{
+    background: var(--color-danger);
+}
+main .insights > div.middle{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+ main .insights h3 {
+    margin: 1rem 0 0.6rem;
+    font-size: 1rem;
+ }
+ main .insights ,progress{
+    position: relative;
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
+ }
+ main .insights svg {
+    width: 15rem;
+    height: 7rem;
+ }
+ main .insights svg circle {
+    fill: none;
+    stroke: var(--color-primary);
+    stroke-width: 15 ;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+    stroke-dasharray: 110;
+    stroke-dashoffset: 92;
+ }
+
+main .insights .income svg circle{
+    stroke-dashoffset: -30;
+    stroke-dasharray: 200;
 
 }
+main .insights .expenses svg circle {
+    stroke-dashoffset: 20;
+    stroke-dasharray: 80;
+}
+main .insights .income svg circle {
+   stroke-dashoffset: 35; 
+   stroke-dasharray: 110 ;
+}
+
+
+main .insight small {
+    margin-top: 1.6rem;
+    display: block;
+}
+
